Fix inconsistent spacing, add proto footer, change experience section header (#7)

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -25,8 +25,13 @@ body {
   font-family: $serif-stack;
   font-size: 12px;
   padding: $default-padding;
-  // margin-top: $header-height + $default-padding * 2;
+  padding-bottom: 0;
   color: $dark-gray;
+}
+
+footer {
+  border-top: 3px solid $blackbox-blue;
+  margin: 0 (-$default-padding);
 }
 
 .icon-github {
@@ -110,10 +115,11 @@ a {
 .main {
   max-width: 600px;
   margin: 0 auto;
+  min-height: 100vh;
 }
 
 section {
-  margin-top: 4rem;
+  margin-bottom: 4rem;
 }
 
 .profile-card {
@@ -208,7 +214,7 @@ $profile-card-photo-width: 40%;
     margin-bottom: 0;
   }
   .resume-job__details {
-    padding: 10px 0;
+    padding: 5px 0;
   }
   .resume-job__position {
     font-style: italic;
@@ -216,7 +222,7 @@ $profile-card-photo-width: 40%;
   }
   .resume-job__highlights {
     list-style: none;
-    margin: 10px;
+    margin: 5px 10px;
     padding: 0;
     li {
       position: relative;
